added flexbox to header section

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	/* border: 0; */
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -41,6 +41,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+* {
+    box-sizing: border-box;
+    border: 1px solid red;
+    max-width: 100%;
+ }
 
 /*  General styles*/
 html {
@@ -51,7 +56,17 @@ body {
     line-height: 1.5;
     font-family: 'Roboto Mono', monospace;
 }
-
+ 
 h1 {
     font-family: 'Libre Baskerville', serif;
+}
+
+/* Header Styles */
+
+header {
+	display: flex;
+	justify-content: space-between;
+}
+nav {
+	display: flex;
 }
