--- a/styles/index.css
+++ b/styles/index.css
@@ -100,6 +100,13 @@ nav a {
 	align-items: center;
 }
 
-.top {
+
+/* "Content section (list of projects) Styles*/
+.top-row {
 	display: flex;
+	justify-content:space-around;
+}
+.bottom-row {
+	display: flex;;
+	justify-content: space-around;
 }
