--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	/* border: 0; */
+	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -43,7 +43,7 @@ table {
 }
 * {
     box-sizing: border-box;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     max-width: 100%;
  }
 
@@ -109,4 +109,19 @@ nav a {
 .bottom-row {
 	display: flex;;
 	justify-content: space-around;
+}
+
+/* Footer Styles */
+
+footer {
+	background-color: lightgray;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 5vh;
+}
+
+.contact-me {
+	width: 10%;
+	padding: 1% 0;
 }
